# PlacementPrepRAG

./: .env  .gitignore  README.md  main.py  pyproject.toml  render.yaml  req.txt  requirements.txt  sample.txt  vectorstore_faiss.txt
backend/: main.py  main.txt  requirements.txt
backend/faiss_store/: faiss.index
backend/src/: embedding.py  eval.py  rag_search.py  temp_vectorstore.py  vectorstore.py
faiss_store/: metadata.pkl
frontend/: index.html  tailwind.config.js
frontend/src/: App.tsx  index.css
src/: data_loader.py  embedding.py  rag_search.py  vectorstore.py
