[project]
name = "placementpreprag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]
